# MADS-ML-PORTFOLIO-FBLAAK

./: README.md  pyproject.toml
1-hypertuning-gridsearch/: model.toml
2-hypertuning-mlflow/: Assignment 2 Fianne Blaak.docx  rerun_top3.ipynb
3-hypertuning-rnn/: rnn_sanity_tb_summary.json  summary.md
3-hypertuning-rnn/scripts/: reproduce_best_assignment1.py
4-hypertuning-ray/: instructions.md  pilot_result.txt  run_pilot.py  summary.md
5-deployment/: docker-compose.yml
5-deployment/ingest/: ingest.Dockerfile
5-deployment/model/: app.py  requirements.txt
5-deployment/preprocess/: preprocess.py
6-hackathon/: Reflection Hackathon.docx
7-ethics/: Assignment 1 Comparison DPIA and TICT.docx  Assignment 2 Ethical Reflection on a Dating Application Case.docx
portfolio-example-main/1-hypertuning-gridsearch/: Assignment 1 Fianne Blaak.docx  notebook.ipynb  summary.md
portfolio-example-main/2-hypertuning-mlflow/: summary.md
portfolio-example-main/3-hypertuning-rnn/: Assignment 3 Fianne Blaak.docx  cross_assignment_summary.json  logging_config.py  mlflow.db  notebook.ipynb  rnn_sanity_summary.json
portfolio-example-main/3-hypertuning-rnn/models/: conv2d_20260614-153449.pt
portfolio-example-main/3-hypertuning-rnn/scripts/: run_sanity_and_conv.py
portfolio-example-main/4-hypertuning-ray/: Assignment 4 Fianne Blaak.docx  best_result.txt  hypertune.py
portfolio-example-main/5-deployment/: summary.md
portfolio-example-main/6-hackathon/: project_cuddlefish.md
portfolio-example-main/7-ethics/: summary.md
(+5 files in other folders)
